# llvm-demo

./: .gitignore  CMakeLists.txt
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
exercise/: CMakeLists.txt  hello
exercise/src/: Align.cpp  CMakeLists.txt  PhiCreate.cpp  test.cpp
include/: ConvertFCmpEq.h  DynamicCallCounter.h  FindFCmpEq.h  InjectFuncCall.h  MBAAdd.h  MBASub.h  OpcodeCounter.h  RIV.h  StaticCallCounter.h
inputs/: MBAAdd.cpp  input_for_cc.c  polly_example.bc  polly_example.c  polly_example_opt.ll
lib/: CMakeLists.txt  ConvertFCmpEq.cpp  DynamicCallCounter.cpp  FindFCmpEq.cpp  InjectFuncCall.cpp  MBAAdd.cpp  MBASub.cpp  OpcodeCounter.cpp  RIV.cpp  StaticCallCounter.cpp
